[gd_scene load_steps=13 format=3]

[ext_resource type="Script" path="res://Script/Level/trap.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cg4vq1ubc5deu" path="res://Art/Trap/Trap_1/1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://wjbcbpleld6n" path="res://Art/Trap/Trap_1/2.png" id="3"]

[sub_resource type="CapsuleShape2D" id="1"]
script = null

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "3" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "3" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "3" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "3" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "3" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "3" )
}],
"loop": false,
"name": &"Trap_1",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource( "2" )
}],
"loop": false,
"name": &"Trap_1_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}, {
"duration": 1.0,
"texture": ExtResource( "2" )
}],
"loop": false,
"name": &"Trap_2",
"speed": 5.0
}]
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(150, 599)
script = null

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("check_who/CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "3" )]
}
script = null

[sub_resource type="CapsuleShape2D" id="5"]
radius = 19.0
height = 60.0
script = null

[sub_resource type="Animation" id="6"]
length = 0.48
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrapAN:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TrapAN:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Trap_1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "5" )]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TrapAN:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("check_who/CollisionShape2D:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "3" )]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("check_who/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 289.5)]
}
script = null

[sub_resource type="Animation" id="7"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrapAN:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TrapAN:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Trap_1_1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("check_who/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TrapAN:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "1" )]
}
script = null

[sub_resource type="Animation" id="8"]
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrapAN:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TrapAN:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Trap_2"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TrapAN:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("check_who/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "1" )]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
script = null

[sub_resource type="AnimationLibrary" id="9"]
_data = {
"RESET": SubResource( "4" ),
"Trap_1": SubResource( "6" ),
"Trap_1_1": SubResource( "7" ),
"Trap_2": SubResource( "8" )
}
script = null

[node name="Trap" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource( "1" )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4352
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( "1" )

[node name="TrapAN" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource( "2" )
animation = &"Trap_1"

[node name="TrapPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource( "9" )
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( "5" )

[node name="check_who" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="check_who"]
position = Vector2(1.5, 289.5)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered" flags=18]
[connection signal="area_entered" from="check_who" to="." method="_on_check_who_area_entered" flags=18]
